--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
 <body class="page">
     <header>
         <nav>
-         <a href=""class="logo">Web<span class="logos">Studio</span></a>    
+            <a href="" class="logo-web">Web<span class="logo-studio">Studio</span></a>    
         <ul class="site-nav">
             <li><a href="./index.html">Studio</a></li>
             <li><a href="">Portfolio</a></li> 
@@ -39,12 +39,12 @@
                <p class="list">App</p>   
             </li>
             <li>
-                <a href=""><img src="./images/img (1).jpg" alt="Label" width="296" height="96"/></a>
+                <a href=""><img src="./images/imgvan.jpg" alt="Label" width="296" height="96"/></a>
                 <h2 class="hero-title">Cashless Payment</h2>
                 <p class="list">Marketing</p>
             </li>
             <li>
-                <a href=""><img src="./images/img (2).jpg" alt="Gadgets" width="296" height="96" /></a>
+                <a href=""><img src="./images/imgtwy.jpg" alt="Gadgets" width="296" height="96" /></a>
                 <h2 class="hero-title">Meditaion App</h2>
                 <p class="list">App</p>
             </li>
@@ -53,17 +53,17 @@
     <section class="hero">
         <ul>
             <li>
-               <a href=""><img src="./images/img (3).jpg" alt="Car" width="360" height="300"/></a>
+               <a href=""><img src="./images/imgthree.jpg" alt="Car" width="360" height="300"/></a>
                <h2 class="hero-title">Taxi Service</h2>
                <p class="list">Marketing</p>   
             </li>
             <li>
-                <a href=""><img src="./images/img (4).jpg" alt="Phone" width="360" height="420"/></a>
+                <a href=""><img src="./images/imgfoor.jpg" alt="Phone" width="360" height="420"/></a>
                 <h2 class="hero-title">Screen Illustrations</h2>
                 <p class="list">Design</p>
             </li>
             <li>
-                <a href=""><img src="./images/img (5).jpg" alt="Girl" width="360" height="300" /></a>
+                <a href=""><img src="./images/imgfive.jpg" alt="Girl" width="360" height="300" /></a>
                 <h2 class="hero-title">Online Courses</h2>
                 <p class="list">Marketing</p>
             </li>
@@ -72,28 +72,27 @@
     <section class="hero">
         <ul>
             <li>
-               <a href=""><img src="./images/img (6).jpg" alt="Instagram Stories" width="360" height="300"/></a>
+               <a href=""><img src="./images/imgsex.jpg" alt="Instagram Stories" width="360" height="300"/></a>
                <h2 class="hero-title">Taxi Service</h2>
                <p class="list">Marketing</p>   
             </li>
             <li>
-                <a href=""><img src="./images/img (7).jpg" alt="Girl" width="296" height="96"/></a>
+                <a href=""><img src="./images/imgseven.jpg" alt="Girl" width="296" height="96"/></a>
                 <h2 class="hero-title">Screen Illustrations</h2>
                 <p class="list">Design</p>
             </li>
             <li>
-                <a href=""><img src="./images/img (9).jpg" alt="Cup of coffee" width="360" height="300" /></a>
+                <a href=""><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300" /></a>
                 <h2 class="hero-title">Online Courses</h2>
                 <p class="list">Marketing</p>
             </li>
         </ul>
     </section> 
-    <footer>
-        <a href=""class="logo">Web<span class="logos">Studio</span></a>    
-                <p class="footer">
+    <footer class="footer">
+        <a href="" class="logo">Web<span class="logos">Studio</span></a>    
+                <p>
         Increase the flow of customers and sales for your business with digital marketing & growth solutions
                 </p>
-    </footer> 
-    <>  
+    </footer>  
 </body>
 </html>
