--- a/portfolio.html
+++ b/portfolio.html
@@ -1,98 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" /> 
-</head>
-
-<body class="page">
-    <header>
-        <nav>
-            <a href="" class="logo-web">Web<span class="logo-studio">Studio</span></a>    
-        <ul class="site-nav">
-            <li><a href="./index.html">Studio</a></li>
-            <li><a href="">Portfolio</a></li> 
-            <li><a href="">Contacts</a></li> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family= Raleway:wght@800 &family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="page-header">
+      <nav class="nav">
+        <a class="logo" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+        <ul class="nav-list">
+          <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+          <li class="nav-item"><a class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link"><a href="">Contacts</a></li>
         </ul>
-        <ul class="auth-nav">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
+        <ul class="contacts">
+          <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contacts-item"><a class="contacts-link" href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
         </ul>
-        </nav>
+      </nav>
     </header>
-    <section class="site">
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Design</button>
-        <button type="button">Marketing</button>
-    </section> 
-    <h1 class="hero-title"></h1>
-    <section class="hero">
-        <ul class="feature-list">
+    <main class="main"> 
+    <section class="section">
+      <h2 class="section-title">Portfolio</h1>
+      <ul class="portfolio-filter">
+        <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">All</button></li>
+        <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">Web Site</button></li>
+        <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">App</button></li>
+        <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">Design</button></li>
+        <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">Marketing</button></li>     
+      </ul>         
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
+          <a class="portfolio-link" href="">
+            <img class="portfolio-img" src="./images/img.jpg" alt="Interface" width="360" height="300" />
+          <h3 class="item-title">Banking App Interface Concept</h2>
+          <p class="description">App</p>
+        </a>
+        </li>
+        <li>
+          <a href=""><img src="./images/imgvan.jpg" alt="Label" width="296" height="96" /></a>
+          <h3 class="item-title">Cashless Payment</h2>
+          <p class="description">Marketing</p>
+        </li>
+        <li>
+          <a href=""><img src="./images/imgtwy.jpg" alt="Gadgets" width="296" height="96" /></a>
+          <h3 class="item-title">Meditaion App</h2>
+          <p class="description">App</p>
+        </li>
+          <li>
+          <a href=""><img src="./images/imgthree.jpg" alt="Car" width="360" height="300" /></a>
+          <h3 class="item-title">Taxi Service</h2>
+          <p class="description">Marketing</p>
+        </li>
+        <li>
+          <a href=""><img src="./images/imgfoor.jpg" alt="Phone" width="360" height="420" /></a>
+          <h3 class="item-title">Screen Illustrations</h2>
+          <p class="description">Design</p>
+        </li>
+        <li>
+          <a href=""><img src="./images/imgfive.jpg" alt="Girl" width="360" height="300" /></a>
+          <h3 class="item-title">Online Courses</h2>
+          <p class="description">Marketing</p>
+        </li>
             <li>
-               <a href=""><img src="./images/img.jpg" alt="Interface" width="360" height="300"/></a>
-               <h2 class="hero-title">Banking App Interface Concept</h2>
-               <p class="list">App</p>   
-            </li>
-            <li>
-                <a href=""><img src="./images/imgvan.jpg" alt="Label" width="296" height="96"/></a>
-                <h2 class="hero-title">Cashless Payment</h2>
-                <p class="list">Marketing</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/imgtwy.jpg" alt="Gadgets" width="296" height="96" /></a>
-                <h2 class="hero-title">Meditaion App</h2>
-                <p class="list">App</p>
-            </li>
-        </ul>
-    </section>  
-    <section class="hero">
-        <ul>
-            <li>
-               <a href=""><img src="./images/imgthree.jpg" alt="Car" width="360" height="300"/></a>
-               <h2 class="hero-title">Taxi Service</h2>
-               <p class="list">Marketing</p>   
-            </li>
-            <li>
-                <a href=""><img src="./images/imgfoor.jpg" alt="Phone" width="360" height="420"/></a>
-                <h2 class="hero-title">Screen Illustrations</h2>
-                <p class="list">Design</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/imgfive.jpg" alt="Girl" width="360" height="300" /></a>
-                <h2 class="hero-title">Online Courses</h2>
-                <p class="list">Marketing</p>
-            </li>
-        </ul>
+          <a href=""
+            ><img src="./images/imgsex.jpg" alt="Instagram Stories" width="360" height="300"
+          /></a>
+          <h3 class="item-title">Taxi Service</h2>
+          <p class="description">Marketing</p>
+        </li>
+        <li>
+          <a href=""><img src="./images/imgseven.jpg" alt="Girl" width="296" height="96" /></a>
+          <h3 class="item-title">Screen Illustrations</h2>
+          <p class="description">Design</p>
+        </li>
+        <li>
+          <a href=""
+            ><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"
+          /></a>
+          <h3 class="item-title">Online Courses</h2>
+          <p class="description">Marketing</p>
+        </li>
+      </ul>
     </section>
-    <section class="hero">
-        <ul>
-            <li>
-               <a href=""><img src="./images/imgsex.jpg" alt="Instagram Stories" width="360" height="300"/></a>
-               <h2 class="hero-title">Taxi Service</h2>
-               <p class="list">Marketing</p>   
-            </li>
-            <li>
-                <a href=""><img src="./images/imgseven.jpg" alt="Girl" width="296" height="96"/></a>
-                <h2 class="hero-title">Screen Illustrations</h2>
-                <p class="list">Design</p>
-            </li>
-            <li>
-                <a href=""><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300" /></a>
-                <h2 class="hero-title">Online Courses</h2>
-                <p class="list">Marketing</p>
-            </li>
-        </ul>
-    </section> 
+  </main>
     <footer class="footer">
-        <a href="" class="logo">Web<span class="logos">Studio</span></a>    
-                <p>
-        Increase the flow of customers and sales for your business with digital marketing & growth solutions
-                </p>
-    </footer>  
-</body>
+      <a class="logo" href=""><span class="logo-accent">Web</span>Studio</a>
+       <p class="footer-desc">
+         Increase the flow of customers and sales for your business with digital marketing & growth
+         solutions
+       </p>
+     </footer>
+  </body>
 </html>
