--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
   <body>
     <header class="page-header">
       <nav class="nav">
-        <a class="logo no-decoration" href="./index.html"
-          >Web<span class="logo-accent">Studio</span></a
-        >
+        <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item">
           <a class="nav-link no-decoration" href="./index.html">Studio</a>
@@ -57,21 +55,21 @@
             solution.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="item-title">Punctuality</h3>
           <p class="description">
             Bring the key message to the brand's audience for the best price within the shortest
             possible time.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="item-title">Diligence</h3>
           <p class="description">
             Research and confirm brands that present the strongest digital growth opportunities and
             minimize risk.
           </p>
         </li>
-        <li>
+        <li class="features-item">
           <h3 class="item-title">Technologies</h3>
           <p class="description">
             Design practice focused on digital experiences. We bring forth a deep passion for
@@ -123,9 +121,7 @@
     </section>
 </main>
     <footer class="footer">
-        <a class="logo no-decoration logo-footer" href="./index.html"
-        >Web<span class="logo-accent">Studio</span></a
-      >
+      <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
       <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions
