--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <nav class="nav">
-        <a class="logo" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
           <li class="nav-item"><a class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
@@ -38,45 +38,45 @@
       <ul class="portfolio-list">
         <li class="portfolio-item">
           <a class="portfolio-link" href="">
-            <img class="portfolio-img" src="./images/img.jpg" alt="Interface" width="360" height="300" />
+            <img class="portfolio-img" src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
           <h3 class="item-title">Banking App Interface Concept</h2>
           <p class="description">App</p>
         </a>
         </li>
         <li>
-          <a href=""><img src="./images/imgvan.jpg" alt="Label" width="296" height="96" /></a>
+          <a href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="296" height="96" /></a>
           <h3 class="item-title">Cashless Payment</h2>
           <p class="description">Marketing</p>
         </li>
         <li>
-          <a href=""><img src="./images/imgtwy.jpg" alt="Gadgets" width="296" height="96" /></a>
+          <a href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="296" height="96" /></a>
           <h3 class="item-title">Meditaion App</h2>
           <p class="description">App</p>
         </li>
           <li>
-          <a href=""><img src="./images/imgthree.jpg" alt="Car" width="360" height="300" /></a>
+          <a href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" /></a>
           <h3 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
         <li>
-          <a href=""><img src="./images/imgfoor.jpg" alt="Phone" width="360" height="420" /></a>
+          <a href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="420" /></a>
           <h3 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
         <li>
-          <a href=""><img src="./images/imgfive.jpg" alt="Girl" width="360" height="300" /></a>
+          <a href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" /></a>
           <h3 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </li>
             <li>
           <a href=""
-            ><img src="./images/imgsex.jpg" alt="Instagram Stories" width="360" height="300"
+            ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"
           /></a>
           <h3 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
         <li>
-          <a href=""><img src="./images/imgseven.jpg" alt="Girl" width="296" height="96" /></a>
+          <a href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="296" height="96" /></a>
           <h3 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
@@ -91,7 +91,7 @@
     </section>
   </main>
     <footer class="footer">
-      <a class="logo" href=""><span class="logo-accent">Web</span>Studio</a>
+      <a class="logo" href="./images/portfolio/latte.jpg">Web<span class="logo-accent">Studio</span></a>
        <p class="footer-desc">
          Increase the flow of customers and sales for your business with digital marketing & growth
          solutions
