changes in html

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
             ><img src="./images/desktop.jpg" alt="Computer" width="360"
           /></a>
         </li>
-        <li>
-          <a href=""><img src="./images/mobiles.jpg" alt="Phone" width="360" /></a>
+        <li class="works-item">
+          <a class="works-link" href=""><img src="./images/mobiles.jpg" alt="Phone" width="360" /></a>
         </li>
-        <li>
-          <a href=""><img src="./images/apps.jpg" alt="Gadgets" width="360" /></a>
+        <li class="works-item">
+          <a class="works-link" href=""><img src="./images/apps.jpg" alt="Gadgets" width="360" /></a>
         </li>
       </ul>
     </section>
