--- a/portfolio.html
+++ b/portfolio.html
@@ -43,44 +43,44 @@
           <p class="description">App</p>
         </a>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="296" height="96" /></a>
           <h3 class="item-title">Cashless Payment</h2>
           <p class="description">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="296" height="96" /></a>
           <h3 class="item-title">Meditaion App</h2>
           <p class="description">App</p>
         </li>
-          <li>
+          <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" /></a>
           <h3 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="420" /></a>
           <h3 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" /></a>
           <h3 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </li>
-            <li>
+            <li class="portfolio-item">
           <a href=""
             ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"
           /></a>
           <h3 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="296" height="96" /></a>
           <h3 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
-        <li>
+        <li class="portfolio-item">
           <a href=""
             ><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"
           /></a>
