--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
     </header>
     <main class="main"> 
     <section class="section">
-      <h2 class="section-title">Portfolio</h1>
+      <h1 class="section-title">Portfolio</h1>
       <ul class="portfolio-filter">
         <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">All</button></li>
         <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">Web Site</button></li>
@@ -39,52 +39,52 @@
         <li class="portfolio-item">
           <a class="portfolio-link" href="">
             <img class="portfolio-img" src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
-          <h3 class="item-title">Banking App Interface Concept</h2>
+          <h2 class="item-title">Banking App Interface Concept</h2>
           <p class="description">App</p>
         </a>
         </li>
         <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="296" height="96" /></a>
-          <h3 class="item-title">Cashless Payment</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="296" height="96" /></a>
+          <h2 class="item-title">Cashless Payment</h2>
           <p class="description">Marketing</p>
         </li>
         <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="296" height="96" /></a>
-          <h3 class="item-title">Meditaion App</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="296" height="96" /></a>
+          <h2 class="item-title">Meditaion App</h2>
           <p class="description">App</p>
         </li>
           <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" /></a>
-          <h3 class="item-title">Taxi Service</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" /></a>
+          <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
         <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="420" /></a>
-          <h3 class="item-title">Screen Illustrations</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="420" /></a>
+          <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
         <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" /></a>
-          <h3 class="item-title">Online Courses</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" /></a>
+          <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </li>
             <li class="portfolio-item">
-          <a href=""
+          <a class="portfolio-link" href=""
             ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"
           /></a>
-          <h3 class="item-title">Taxi Service</h2>
+          <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
         <li class="portfolio-item">
-          <a href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="296" height="96" /></a>
-          <h3 class="item-title">Screen Illustrations</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="296" height="96" /></a>
+          <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </li>
         <li class="portfolio-item">
-          <a href=""
+          <a class="portfolio-link" href=""
             ><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"
           /></a>
-          <h3 class="item-title">Online Courses</h2>
+          <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </li>
       </ul>
