--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="page-header">
       <nav class="nav">
-        <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
+        <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item">
           <a class="nav-link no-decoration" href="./index.html">Studio</a>
@@ -121,7 +121,7 @@
     </section>
 </main>
     <footer class="footer">
-      <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
+      <a class="logo logo-footer no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
       <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions
