--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </section>
 </main>
     <footer class="footer">
-      <a class="logo logo-footer no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
+      <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent logo-footer">Studio</span></a>
       <p class="footer-desc">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions
