--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
   <body>
     <header class="page-header">
       <nav class="nav">
-        <a class="logo" href="./index.html">Web<span class="logo-accent">Studio</span></a>
+        <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
         <ul class="nav-list">
           <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
           <li class="nav-item"><a class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
@@ -91,7 +91,7 @@
     </section>
   </main>
     <footer class="footer">
-      <a class="logo" href="./images/portfolio/latte.jpg">Web<span class="logo-accent">Studio</span></a>
+      <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent logo-footer">Studio</span></a>
        <p class="footer-desc">
          Increase the flow of customers and sales for your business with digital marketing & growth
          solutions
