--- a/portfolio.html
+++ b/portfolio.html
@@ -37,8 +37,7 @@
       </ul>         
       <ul class="portfolio-list">
         <li class="portfolio-item">
-          <a class="portfolio-link" href="">
-            <img class="portfolio-img" src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
+          <a class="portfolio-link" href=""><img class="portfolio-img" src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
           <h2 class="item-title">Banking App Interface Concept</h2>
           <p class="description">App</p>
         </a>
@@ -69,9 +68,7 @@
           <p class="description">Marketing</p>
         </li>
             <li class="portfolio-item">
-          <a class="portfolio-link" href=""
-            ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"
-          /></a>
+          <a class="portfolio-link" href="" ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"/></a>
           <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </li>
@@ -81,9 +78,7 @@
           <p class="description">Design</p>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""
-            ><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"
-          /></a>
+          <a class="portfolio-link" href=""><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"/></a>
           <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </li>
