--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family= Raleway:wght@800 &family=Roboto:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
     <title>WebStudio</title>
@@ -94,7 +94,7 @@
         </li>
       </ul>
     </section>
-    <section class="section team">
+    <section class="section-team">
       <h2 class="section-title">Our Team</h3>
       <ul class="team-list">
         <li class="team-item">
