--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family= Raleway:wght@800 &family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
+    rel="stylesheet">
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
@@ -14,14 +15,15 @@
     <header class="page-header">
       <nav class="nav">
         <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
-        <ul class="nav-list">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
+        <ul class="nav-list nav-list-no-decoration">
+          <li class="nav-item"><a class="nav-link nav-link-no-decoration"><a href="./index.html">Studio</a></li>
           <li class="nav-item"><a class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
           <li class="nav-item"><a class="nav-link"><a href="">Contacts</a></li>
         </ul>
         <ul class="contacts">
-          <li class="contacts-item"><a class="contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contacts-item"><a class="contacts-link" href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
+          <li class="contacts-item"><a class="contacts-link link-no-decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+.link-no-decoration {
+          <li class="contacts-item"><a class="contacts-link link-no-decoration" href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
         </ul>
       </nav>
     </header>
@@ -37,50 +39,57 @@
       </ul>         
       <ul class="portfolio-list">
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img class="portfolio-img" src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
-          <h2 class="item-title">Banking App Interface Concept</h2>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
+          <h2 class="item-title item-decoration">Banking App Interface Concept</h2>
           <p class="description">App</p>
         </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="296" height="96" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="360" height="300" />
           <h2 class="item-title">Cashless Payment</h2>
           <p class="description">Marketing</p>
+        </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="296" height="96" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="360" height="300" />
           <h2 class="item-title">Meditaion App</h2>
           <p class="description">App</p>
+        </a>
         </li>
           <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" />
           <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
+        </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="420" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="300" />
           <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
+        </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" />
           <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
+        </a>
         </li>
             <li class="portfolio-item">
-          <a class="portfolio-link" href="" ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"/></a>
+          <a class="portfolio-link" href="" ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"/>
           <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
+        </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="296" height="96" /></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="360" height="300" />
           <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
+        </a>
         </li>
         <li class="portfolio-item">
-          <a class="portfolio-link" href=""><img src="./images/imgeiht.png" alt="Cup of coffee" width="360" height="300"/></a>
+          <a class="portfolio-link" href=""><img src="./images/portfolio/latte.jpg" alt="Cup of coffee" width="360" height="300"/>
           <h2 class="item-title">Online Courses</h2>
-          <p class="description">Marketing</p>
+          <p class="description">Marketing</p></a>
         </li>
       </ul>
     </section>
