--- a/portfolio.html
+++ b/portfolio.html
@@ -15,15 +15,26 @@
     <header class="page-header">
       <nav class="nav">
         <a class="logo no-decoration" href="./index.html">Web<span class="logo-accent">Studio</span></a>
-        <ul class="nav-list nav-list-no-decoration">
-          <li class="nav-item"><a class="nav-link nav-link-no-decoration"><a href="./index.html">Studio</a></li>
-          <li class="nav-item"><a class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="nav-item"><a class="nav-link"><a href="">Contacts</a></li>
+        <ul class="nav-list">
+          <li class="nav-item">
+          <a class="nav-link no-decoration" href="./index.html">Studio</a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link no-decoration" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item"><a class="nav-link no-decoration" href="">Contacts</a></li>
         </ul>
         <ul class="contacts">
-          <li class="contacts-item"><a class="contacts-link link-no-decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-.link-no-decoration {
-          <li class="contacts-item"><a class="contacts-link link-no-decoration" href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
+          <li class="contacts-item">
+            <a class="contacts-link no-decoration" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link no-decoration" href="tel:+11(000)111-11-11"
+              >+11(000)111-11-11</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -38,59 +49,77 @@
         <li class="portfolio-filter-item"><button type="button" class="portfolio-filter-bnt">Marketing</button></li>     
       </ul>         
       <ul class="portfolio-list">
+<div class="text-background">
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/apps.jpg" alt="Interface" width="360" height="300" />
           <h2 class="item-title item-decoration">Banking App Interface Concept</h2>
           <p class="description">App</p>
         </a>
         </li>
+</div>
+<div class="text-background">        
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/scaner.jpg" alt="Label" width="360" height="300" />
           <h2 class="item-title">Cashless Payment</h2>
           <p class="description">Marketing</p>
         </a>
         </li>
+</div>
+<div class="text-background">
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/desctop.jpg" alt="Gadgets" width="360" height="300" />
           <h2 class="item-title">Meditaion App</h2>
           <p class="description">App</p>
         </a>
         </li>
+</div>
+<div class="text-background">       
           <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/car.jpg" alt="Car" width="360" height="300" />
           <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </a>
         </li>
+</div>
+<div class="text-background">        
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/mobiles.jpg" alt="Phone" width="360" height="300" />
           <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </a>
         </li>
+</div>
+<div class="text-background">        
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/girl.jpg" alt="Girl" width="360" height="300" />
           <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p>
         </a>
         </li>
+</div>
+<div class="text-background">       
             <li class="portfolio-item">
           <a class="portfolio-link" href="" ><img src="./images/portfolio/instagram.jpg" alt="Instagram Stories" width="360" height="300"/>
           <h2 class="item-title">Taxi Service</h2>
           <p class="description">Marketing</p>
         </a>
         </li>
+</div>
+<div class="text-background">       
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/food.jpg" alt="Girl" width="360" height="300" />
           <h2 class="item-title">Screen Illustrations</h2>
           <p class="description">Design</p>
         </a>
         </li>
+</div>
+<div class="text-background">        
         <li class="portfolio-item">
           <a class="portfolio-link" href=""><img src="./images/portfolio/latte.jpg" alt="Cup of coffee" width="360" height="300"/>
           <h2 class="item-title">Online Courses</h2>
           <p class="description">Marketing</p></a>
-        </li>
+          </li>
+</div>                   
       </ul>
     </section>
   </main>
